tests/baselines/reference/allowJscheckJsTypeParameterNoCrash(strict=true).errors.txt
app.js(6,7): error TS2322: Type 'number' is not assignable to type 'WatchHandler<any>'.
app.js(8,5): error TS7022: 'data2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== func.ts (0 errors) ====
    interface ComponentOptions<V> {
        watch: Record<string, WatchHandler<any>>;
    }
    type WatchHandler<T> = (val: T) => void;
    declare function extend(options: ComponentOptions<{}>): void;
    export var vextend = extend;
==== app.js (2 errors) ====
    import {vextend} from './func';
    // hover on vextend
    export var a = vextend({
      watch: {
        data1(val) {
          this.data2 = 1;
          ~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'WatchHandler<any>'.
        },
        data2(val) { },
        ~~~~~
!!! error TS7022: 'data2' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
      }
    });